# magics

./: .envrc  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
config/scenarios/Collaborative Complex/: config.toml  formation.yaml
config/scenarios/Collaborative GP/: config.toml
config/scenarios/Communications Failure Experiment/: config.toml  environment.yaml
config/scenarios/Environment Obstacles Experiment/: environment.yaml
config/scenarios/Iteration Amount Experiment/: config.toml
config/scenarios/Junction Twoway/: config.toml  environment.yaml
config/scenarios/Obstacle Shapes Showcase/: environment.yaml
crates/angle/: Cargo.toml
crates/angle/src/: lib.rs
crates/bevy_fullscreen/: Cargo.toml
crates/bevy_fullscreen/src/: lib.rs
crates/bevy_notify/: Cargo.toml
crates/bevy_touchpad/: Cargo.toml
crates/env_to_png/: Cargo.toml
crates/gbp_config/: Cargo.toml
crates/gbp_environment/: Cargo.toml
crates/gbp_geometry/: Cargo.toml
crates/gbp_global_planner/: Cargo.toml
crates/gbp_linalg/: Cargo.toml
crates/gbp_multivariate_normal/: Cargo.toml
crates/gbp_schedule/: Cargo.toml
crates/gbp_schedule/src/schedules/: centered.rs  half_beginning_half_end.rs  interleave_evenly.rs  late_as_possible.rs  mod.rs
crates/interleave_evenly/: Cargo.toml
crates/magics/: Cargo.toml
crates/min_len_vec/: Cargo.toml
crates/percentage/: Cargo.toml
crates/repeating_array/: Cargo.toml
crates/repeating_array/src/: lib.rs
crates/seq/: Cargo.toml
crates/seq/src/: lib.rs
crates/unit_interval/: Cargo.toml
crates/units/: Cargo.toml
scripts/: analyse-circle-scenario.ipynb  analyse-collaborative-complex.ipynb  analyse-comms-failure.ipynb  analyse-environment-collisions.ipynb  analyse-iteration-amount-experiment.ipynb  analyse-junction-scenario.ipynb  analyse-network-scenario.ipynb  analyse-schedules-experiment.ipynb  analyse-structured-junction-twoway.ipynb  analyse-structured-junction-twoway.nbconvert.ipynb  collaborative-gp.ipynb  solo-gp.ipynb
(+67 files in other folders)
