[package]
name                   = "gbp_schedule"
edition.workspace      = true
description            = "Iteration schedules for the gbp algorithm"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
bevy.workspace = true

[lints]
workspace = true
