[package]
name                   = "repeating_array"
edition.workspace      = true
description            = "A repeating array type"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]

[lints]
workspace = true
