[package]
name                   = "seq"
edition.workspace      = true
description            = "Iterators for common sequences"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]

[lints]
workspace = true
